--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -11,7 +11,7 @@ body {
     }
     .imagen {
         height: 30rem;
-        background-image: url(/build/img/1.webp);
+        background-image: url(../build/img/1.webp);
         background-size: cover;
         background-position: center center;
         @include tablet {
